# SatMotionSim

./: CMakeLists.txt  build.sh  environment.h  main.cpp  run.sh  satellite.h  vector3D.h
include/: environment.h  helpers.h  render.h  satellite.h  vector3D.h
src/: main.cpp
src/common/: helpers.cpp  render.cpp  vector3D.cpp
src/core/: environment.cpp  satellite.cpp
